fixed link styles and dark mode toggle

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -23,6 +23,8 @@ body {
     background-color: white;
     border: none;
     font-size: 1.3em;
+    padding:7px 20px 5px 20px;
+    text-align: center;
 }
 
 @media only screen and (max-width: 700px) {
